oops, forgot these also

--- a/todo/templates/todo/list_detail.html
+++ b/todo/templates/todo/list_detail.html
@@ -7,7 +7,7 @@
 
   {% if list_slug != "mine" %}
     <button class="btn btn-primary" id="AddTaskButton" type="button"
-      data-toggle="collapse" data-target="#AddEditTask">Add Task</button>
+      data-bs-toggle="collapse" data-bs-target="#AddEditTask">Add Task</button>
 
     {# Task edit / new task form #}
     <div id="AddEditTask" class="collapse">
